--- a/pom.xml
+++ b/pom.xml
@@ -105,4 +105,31 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>integration-test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.1.2</version>
+						<configuration>
+							<includes combine.self="override">
+								<include>**/*IT.java</include>
+							</includes>
+							<excludes combine.self="override">
+								<exclude>**/*Test.java</exclude>
+							</excludes>
+							<properties>
+								<junit.jupiter.extensions.autodetection.enabled>true
+								</junit.jupiter.extensions.autodetection.enabled>
+							</properties>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
